fix ui style problems in mobile view
Change Log:
-----------
* Subheader navigation now doesn't render when screen is too small
* 'View' buttons now styled to look cleaner in mobile view

--- a/themes/lumen.css
+++ b/themes/lumen.css
@@ -829,6 +829,12 @@ div#guides-button-container {
 		float: none;
 		width: auto;
 	}
+	#centercontent {
+		margin-top: 35px;
+	}
+	#viewbuttoncont {
+		float: inherit !important;
+	}
 }
 
 @media (max-width: 650px) {
@@ -860,6 +866,16 @@ div#guides-button-container {
 	}
 	span#myname {
 		border: none;
+	}
+	div#navlistcont {
+		display: none;
+	}
+	#viewbuttoncont {
+		display: flex;
+		flex-direction: column;
+	}
+	#viewbuttoncont a {
+		margin-bottom: 4px;
 	}
 }
 
